--- a/src/admin-side/products/products.css
+++ b/src/admin-side/products/products.css
@@ -20,7 +20,7 @@
   justify-content: space-evenly;
 }
 
-button {
+/* button {
     border-radius: 25%;
     max-height: 5rem;
     max-width: 5rem;
@@ -29,5 +29,5 @@ button {
     text-align: center;
     padding: 0.5rem;
     margin: 0;
-}
+} */
 
