--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap');
+
+:root {
+  /* --OffWhite: ghostwhite; */
+  --OffWhite: #fff;
+  --DarkBlue: #122439;
+  --LightBlue: #335C81;
+  --LightGrey: #ddd;
+  --RaisinBlack: #242423;
+  --Yellow: #F5CB5C;
+}
+
 body {
-  margin: 10;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: var(--OffWhite);
+  font-family: 'Jost', sans-serif;
+  margin: 1%;
+}
+
+header {
+  text-align: center;
+}
+
+h1{
+  color:var(--LightBlue);
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
