basic button routing working and both tables rendering correctly

--- a/src/admin-side/products/view-product-container/EditButtons.css
+++ b/src/admin-side/products/view-product-container/EditButtons.css
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
 }
 
- .edit-buttons-container > button {
+ .edit-buttons-container button {
     cursor:pointer;
     height: 40px;
     min-width: 100px;
