--- a/src/admin-side/products/button-elements/AddProductButton.css
+++ b/src/admin-side/products/button-elements/AddProductButton.css
@@ -1,4 +1,4 @@
-.edit-buttons-container{
+button.new-product{
     width: 40%;
     margin: 20px;
     border: solid red 1px;
@@ -7,23 +7,23 @@
     justify-content: space-evenly;
 }
 
- .edit-buttons-container button {
+ /* .edit-buttons-container button {
     color: var(--OffWhite);
     cursor:pointer;
     height: 40px;
     min-width: 100px;
     font-size: 1rem;
-}
+} */
 
-.cancel-product{
+/* .cancel-product{
     background-color: #FB3640;
-}
+} */
 
-.new-product,
+/* .new-product,
 .edit-product {
     background-color: var(--LightBlue);
-}
+} */
 
-.publish-product{
+/* .publish-product{
     background-color:#338156;
-}
+} */
