pulled buttons out into their own components, made it so that you can add and remove the new item submission easily

--- a/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
+++ b/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
@@ -18,6 +18,12 @@ button.edit {
     background-color: blue;
 }
 
-button.cancel{
+p.cancel{
+    cursor: pointer;
+    color: #FB3640;
+}
+
+p.cancel:hover{
+    color: var(--OffWhite);
     background-color: #FB3640;
 }
