--- a/src/admin-side/products/button-elements/Buttons.css
+++ b/src/admin-side/products/button-elements/Buttons.css
@@ -1,10 +1,6 @@
-button.new-product{
-    width: 40%;
-    margin: 20px;
-    border: solid red 1px;
-
-    display:flex;
-    justify-content: space-evenly;
+button.new-product,
+button.edit-all{
+    width: 5%;
 }
 
  /* .edit-buttons-container button {
