CRU, BABY! Just need the D...

--- a/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
+++ b/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
@@ -14,6 +14,11 @@ button.save {
     background-color: #53af6f;
 }
 
+button.submit:hover,
+button.save:hover {
+    background-color: #3d8a55;
+}
+
 button.edit {
     background-color: blue;
 }
