--- a/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
+++ b/src/admin-side/products/table-elements/table-row-elements/TableButtons.css
@@ -1,12 +1,14 @@
 button.submit,
 button.save,
 button.edit,
-button.cancel {
+button.cancel,
+button.delete {
     cursor:pointer;
     height: 25px;
     min-width: 60px;
     font-size: 0.8rem;
-    color: var(--OffWhite)
+    color: var(--OffWhite);
+    margin:5%;
 }
 
 button.submit,
@@ -24,17 +26,28 @@ button.edit {
 }
 
 button.edit:hover{
-    background-color: var(--DarkBlue);
+    background-color: #5a8cba;
 }
 
-p.cancel{
+button.delete{
+    color:var(--OffWhite);
+    background-color: #b2272e;
+}
+
+button.delete:hover{
+    color:var(--OffWhite);
+    background-color:#ff2832;
+}
+
+p.cancel
+{
     cursor: pointer;
-    color: #FB3640;
+    color: #b2272e;
 }
 
 p.cancel:hover{
     color: var(--OffWhite);
-    background-color: #FB3640;
+    background-color: #ff2832;
 }
 
 td.edit-buttons p {
