--- a/src/customer-side/CustomerProductContainer.css
+++ b/src/customer-side/CustomerProductContainer.css
@@ -49,3 +49,14 @@ div.order-info-buttons input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+p.product-page-back{
+    color:var(--RaisinBlack);
+    font-size: 1.5rem;
+    margin:0rem 0rem 5rem 0rem;
+    text-align: center;
+}
+
+p.product-page-back:hover{
+    cursor: pointer;
+}
