found a fix for the onhover border moving items aroudn it. However now it moves items within it. Fine for now.

--- a/src/customer-side/ViewProductsContainer.css
+++ b/src/customer-side/ViewProductsContainer.css
@@ -13,11 +13,11 @@ section.products img:hover {
     cursor: pointer;
 }
 
-
 /* Product card containers */
 section.products article {
     width: 17vw;
     min-width: 250px;
+    box-sizing: border-box;
 
     border: solid 1px var(--LightGrey);
     border-radius: 1%;
