restructured the router so that we have two jellyfish heads for each side of the app. Renamed components and changed the file structure so things are easier ot find

--- a/src/navigation/AdminPortalNav.css
+++ b/src/navigation/AdminPortalNav.css
@@ -1,4 +1,4 @@
-div.admin-nav {
+/* div.admin-nav {
     display:grid;
     grid-template-columns: 5fr 1fr;
 
@@ -36,4 +36,4 @@ div.admin-nav p.login{
     justify-self:end;
     align-self:center;
     
-}
+} */
