--- a/src/customer-side/product-views/ProductCard.css
+++ b/src/customer-side/product-views/ProductCard.css
@@ -1,18 +1,3 @@
-section.products {
-    display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    justify-content: center;
-}
-
-section.products article:hover {
-    border: solid 3px var(--LightGrey);
-}
-
-section.products img:hover {
-    cursor: pointer;
-}
-
 /* Product card containers */
 section.products article {
     width: 17vw;
@@ -25,23 +10,12 @@ section.products article {
     margin: 1%;
 }
 
-/* Category headers */
-section.category > h2 {
-    width: 100%;
-    height: 100%;
-    background-color: var(--LightBlue);
-    margin: 2% 0%;
-
-    color: var(--OffWhite);
-    font-size: 2rem;
-    text-align: center; 
-}
-
-/* Product tiles header */
+/* Product Card header */
 section.products h3 {
     margin: 5% 0%;
 }
 
+/* Product cart text */
 section.products p {
     text-align: center;
     margin: 5% 0%;
@@ -73,4 +47,10 @@ section.add-to-cart button {
     cursor: pointer;
 }
 
+section.products img:hover {
+    cursor: pointer;
+}
 
+section.products article:hover {
+    border: solid 3px var(--LightGrey);
+}
