added / to requests and changed the hover css for products page

--- a/src/customer-side/product-views/AllProducts.css
+++ b/src/customer-side/product-views/AllProducts.css
@@ -6,6 +6,16 @@ section.products {
     justify-content: center;
 }
 
+section.products:hover .product-card:not(:hover){
+    filter: grayscale(100%);
+    opacity:0.5;
+}
+
+section.products:hover .product-card:not(:hover):after{
+    background-color: rgba(#000, 0.5);
+}
+
+
 /* Category headers */
 section.category > h2 {
     width: 100%;
@@ -17,5 +27,3 @@ section.category > h2 {
     font-size: 2rem;
     text-align: center; 
 }
-
-
