added the refresh icon and the go back icon on the product page

--- a/src/customer-side/product-views/ViewProduct.css
+++ b/src/customer-side/product-views/ViewProduct.css
@@ -28,6 +28,10 @@ div.order-info-buttons{
     grid-template-rows: 1fr 1fr;
 }
 
+div.order-info-buttons button:hover{
+    cursor: pointer;
+}
+
 div.order-info-buttons input,
 div.order-info-buttons button{
     border: 1px solid var(--LightBlue);
